--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
-title: "Personal blog of Elisa Bayraktarov - welcome"
+title: "Elisa Bayraktarov's personal blog site"
 author: "Elisa Bayraktarov"
-description: "Reflections on my life's achievements, 40 days before my 40th birthday." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
+description: "Reflections on my resarch, life and curiosities I encounter in this beautiful world." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
 email: "elisa.bayraktarov@gmx.de"
-twitter_username: "https://twitter.com/ElisaBayra"
-github_username: "https://github.com/ElisaBayra"
-linkedin_username: "https://www.linkedin.com/in/elisa-bayraktarov-0112078/"
+twitter_username: "@ElisaBayra"
+github_username: "ElisaBayra"
+linkedin_username: "elisa-bayraktarov"
 #facebook_username: username
 #flickr_username: username
 #instagram_username: username
