--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
-title: "Elisa Bayraktarov's personal blog site"
+title: "Elisa Bayraktarov's personal blog"
 author: "Elisa Bayraktarov"
-description: "Reflections on my resarch, life and curiosities I encounter in this beautiful world." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
+description: "Reflections on my research, life, love and other curiosities." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
 email: "elisa.bayraktarov@gmx.de"
-twitter_username: "@ElisaBayra"
+twitter_username: "ElisaBayra"
 github_username: "ElisaBayra"
-linkedin_username: "elisa-bayraktarov"
+linkedin_username: "elisa.bayraktarov"
 #facebook_username: username
 #flickr_username: username
 #instagram_username: username
