--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: "Reflections on my research, life, love and other curiosities." # T
 email: "elisa.bayraktarov@gmx.de"
 twitter_username: "ElisaBayra"
 github_username: "ElisaBayra"
-linkedin_username: "elisa bayraktarov"
+linkedin_username: "elisa-bayraktarov-0112078"
 #facebook_username: username
 #flickr_username: username
 #instagram_username: username
