--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "Elisa Bayraktarov's personal blog"
+title: "Elisa's fabulous blog site"
 author: "Elisa Bayraktarov"
 description: "Reflections on my research, life, love and other curiosities." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
