--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: "Elisa's fabulous blog site"
+title: "Elisa's fabulous blog"
 author: "Elisa Bayraktarov"
-description: "Reflections on my research, life, love and other curiosities. First clumsy steps using GitHub Pages." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
+description: "Reflections on my research, life, love and other curiosities. Come marvel with me while I'm doing my first clumsy steps using GitHub Pages." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
