--- a/_config.yml
+++ b/_config.yml
@@ -5,9 +5,9 @@ description: "Reflections on my research, life, love and other curiosities - com
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
 email: "elisa.bayraktarov@gmail.com"
-twitter_username: "ElisaBayra"
+#twitter_username: "ElisaBayra"
 github_username: "ElisaBayra"
-#linkedin_username: "elisa-bayraktarov-0112078"
+linkedin_username: "elisa-bayraktarov-0112078"
 #facebook_username: username
 #flickr_username: username
 #instagram_username: username
